--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,43 @@ header {
   margin-bottom: 100px;
 }
 
+.columnsn {
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  justify-content: center;
+  height: 237px;
+  border: solid 1px;
+}
+.site_search_inpt {
+  width: 100%;
+  border-radius: 100px;
+}
+.search_btn {
+  position: relative;
+  left: 220px;
+  bottom: 25px;
+}
+.bt{
+  background-color: #eff5f8;
+  width: 110px;
+  height: 25px;
+  text-align: center;
+  border-radius: 10px;
+  margin: 12px 0 21px;
+}
+.bt a {
+  color: #17577a;
+  font-size: 12px;
+  font-weight: 400;
+  text-decoration: none;
+}
+.bt i {
+  margin-right: 10px;
+}
+
+
+
 ul {
   padding-left: 10px;
   text-align: left;
