--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
   src: url("../fonts/Trebuchet/Trebuchet.svg#Trebuchet") format("svg"),
        url("../fonts/Trebuchet/Trebuchet.ttf") format('truetype'),
        url('../fonts/Trebuchet/Trebuchet.woff')  format('woff');
-}
+}    /* Trebuchet */
 
 .container {
   max-width: 1100px;
@@ -37,17 +37,39 @@ header {
   flex-direction: column;
   /* align-items: center; */
   justify-content: center;
-  height: 237px;
-  border: solid 1px;
+  height: 210px;
+  /* padding: 10px; */
+}
+.columnsn_2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 210px;
+  /* padding: 10px; */
+}
+.site_search {
+  position: relative;
 }
 .site_search_inpt {
   width: 100%;
+  height: 35px;
   border-radius: 100px;
+  background-color: #f4f4f4;
 }
-.search_btn {
-  position: relative;
-  left: 220px;
-  bottom: 25px;
+.search_btn button {
+  padding: 0;
+  font-size: 12px;
+  background-color: #efefef;
+  border-radius: 100%;
+  position: absolute;
+  z-index: 99;
+  right: 4px;
+  top: 3px;
+  border: solid 1px #d8d8d8;
+}
+.search_btn i {
+  padding: 8px;
 }
 .bt{
   background-color: #eff5f8;
@@ -65,6 +87,73 @@ header {
 }
 .bt i {
   margin-right: 10px;
+}
+.head_text {
+  padding: 0;
+  text-align: center;
+}
+.p1 {
+  text-shadow: 0 0 0 rgba(255, 255, 255, 0.75);
+  color: #005177;
+  font-family: "RotondaC";
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 20.72px;
+}
+.p2 {
+  text-shadow: 0 0 0 rgba(255, 255, 255, 0.75);
+  color: #005177;
+  font-family: "RotondaC";
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 18.58px;
+}
+.pp {
+  color: #2d5d7e;
+  font-family: "RotondaBold";
+  font-size: 26px;
+}
+header .span_phone {
+    color: #4a8cbf;
+}
+.bg_head {
+  font-size: 13px;
+  background: url('../img/bg_head.png') no-repeat center/100%;
+  width: 224px;
+  height: 25px;
+  margin-top: 7px;
+  margin-bottom: 8px;
+  font-family: 'Trebuchet';
+  color: #3a617f;
+  font-weight: 400;
+}
+.bg_head p {
+  display: inline-block;
+  padding: 0;
+  margin: 0;
+}
+.for_p1 p {
+  margin-left: 13px;
+}
+.for_p2 {
+  position: relative;
+}
+.for_p2 p {
+  margin-left: 13px;
+  margin-right: 30px;
+  /* border: solid 1px; */
+}
+.for_p2 i {
+  font-size: 25px;
+  transform: rotate(20deg);
+  position: absolute;
+  /* border: solid 1px; */
+}
+.for_p2 a {
+  color: #3a617f;
+}
+.for_p2 a:hover {
+  color: #3a617f;
 }
 
 
@@ -215,18 +304,13 @@ footer {
   background: url("../img/background-footer.png") 0 30px repeat-x;
   height: 211px;
   margin-top: 50px;
-  border: solid 1px;
-}
-footer .p {
-  color: #2d5d7e;
-  font-family: "RotondaBold";
-  font-size: 26px;
+  /* border: solid 1px; */
 }
 footer i {
   font-size: 24px;
   margin-right: 10px;
 }
-footer span {
+footer .span_phone {
     color: #06465f;
 }
 .foot  {
@@ -257,11 +341,6 @@ footer span {
 }
 .logo_footer img {
   width: 100%;
-  /* border: solid 1px; */
-}
-
-.borders {
-  /* border: 1px solid; */
 }
 
 
