--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
 }
 
 body {
-  background-color: #fff8dd;
+  background-color: #cceeff;
   -webkit-overflow-scrolling: touch;
 	font-family: Trebuchet;
 }
@@ -31,7 +31,25 @@ header {
   height: 237px;
   margin-bottom: 100px;
 }
+/* all {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  border: solid 1px;
+  min-height: 100%;
+} */
+section .main {
+  /* flex: 1 0  auto; */
+  padding: 0;
+  margin: 0;
+}
+footer {
+  flex: 0 0 auto;
+}
 
+
+/*=============================== index.html=================================================*/
 .columnsn {
   display: flex;
   flex-direction: column;
@@ -46,7 +64,6 @@ header {
   align-items: center;
   justify-content: center;
   height: 210px;
-  /* padding: 10px; */
 }
 .site_search {
   position: relative;
@@ -118,7 +135,8 @@ header {
   font-size: 26px;
 }
 header  .span_phone {
-    color: #4a8cbf;
+  margin-left: 10px;
+  color: #4a8cbf;
 }
 .bg_head {
   font-size: 13px;
@@ -130,22 +148,29 @@ header  .span_phone {
   font-family: 'Trebuchet';
   color: #3a617f;
   font-weight: 400;
+  border-radius: 40%;
+}
+.bg_head:hover {
+  border: solid 1px #4a8cbf;
 }
 .bg_head p {
   display: inline-block;
   padding: 0;
   margin: 0;
+  font-size: 12px;
 }
 .for_p1 p {
+  margin-top: 3px;
   margin-left: 13px;
 }
 .for_p2 {
   position: relative;
 }
 .for_p2 p {
-  margin-left: 13px;
-  margin-right: 30px;
-  /* border: solid 1px; */
+  margin: 3px 18px 0px 32px;
+}
+.for_p1 i {
+  margin-left: 5px;
 }
 .for_p2 i {
   font-size: 25px;
@@ -155,6 +180,7 @@ header  .span_phone {
 }
 .for_p2 a {
   color: #3a617f;
+
 }
 .for_p2 a:hover {
   color: #305069;
@@ -181,17 +207,23 @@ a:hover {
 	align-items: center;
 	justify-content: flex-start;
 }
+.Name img {
+  min-width: 60px
+}
+.Name > a {
+  /* display: inline; */
+}
 .Name h4 {
 	margin-left: 10px;
 	color: #2d5d7e;
 	font-family: RotondaBold;
 }
-.object p {
+.object_li p {
   padding: 0 10px;
 	margin-top: 3;
 	font-family: RotondaBold;
 }
-.object {
+.object_li {
   padding-bottom: 20px;
 }
 
@@ -318,7 +350,7 @@ footer .span_phone {
     color: #06465f;
 }
 .foot  {
-  margin-top: 30px;
+  margin-top: 90px;
   /* min-height: 180px; */
   display: flex;
   justify-content: center;
@@ -404,4 +436,78 @@ footer .span_phone {
   .Delivery_Advertising img {
     height: 115px;
   }
+}
+
+/*=============================== /index.html=================================================*/
+
+.main h1 {
+  color: #2d5d7e;
+  font-family: "RotondaBold";
+  font-size: 33px;
+  font-weight: 700;
+  /* line-height: 33.33px; */
+}
+.main p {
+  color: #2d5d7e;
+  font-family: "Trebuchet";
+  font-size: 14px;
+  font-weight: 400;
+}
+.start a {
+  display: inline-block;
+  text-decoration: none;
+  color: #2d5d7e;
+}
+.start a:hover {
+  text-decoration: underline;
+}
+
+.sort_by {
+  background: url('../img/bg_for_start.png') no-repeat center/100%;
+  padding: 10px;
+  width: 100%;
+  height: 64px;
+}
+.sort_by input {
+  font-size: 15px;
+  border: 0;
+  padding: 19px 7px 14px;
+  background-color: #ffffff
+}
+.sort_by input:first-child {
+  margin-right: 50px;
+}
+.sort_by input:hover {
+  padding-right: 15px;
+  padding-left: 15px;
+  border: solid 1px #def0f6;
+  background-color: #d6edf4;
+}
+
+.object {
+  margin-top: 30px;
+}
+.object:last-child {
+  margin-bottom: 30px;
+}
+.object p {
+  margin-top: 30px;
+  color: #090000;
+  font-family: "Trebuchet";
+  font-size: 17px;
+  font-weight: 700;
+}
+.info_tovar {
+  display: flex;
+  background: url('../img/bg_for_tovar.png') no-repeat center/100%;
+  width: 681px;
+  min-height: 262px;
+}
+
+
+
+
+
+.main .col-lg-12 {
+  /* border: solid 1px; */
 }
