--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,9 @@ footer {
   font-family: "RotondaBold";
   font-size: 26px;
 }
+.head_logo {
+  margin-top: 15px;
+}
 header  .span_phone {
   margin-left: 10px;
   color: #4a8cbf;
@@ -371,6 +374,10 @@ footer .span_phone {
   color: #afcede;
   padding: 8px;
   margin: 0;
+}
+.foot a:hover {
+  font-size: 18px;
+  border: 2px solid #4a91b5;
 }
 .logo_footer {
   /* border: solid 1px; */
