--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,12 @@
        url('../fonts/RotondaBold/RotondaBold.ttf') format('truetype'),
        url('../fonts/RotondaBold/RotondaBold.woff')  format('woff');
 }
-@font-face {
+@font-face {   /* Trebuchet */
   font-family: 'Trebuchet';
   src: url("../fonts/Trebuchet/Trebuchet.svg#Trebuchet") format("svg"),
        url("../fonts/Trebuchet/Trebuchet.ttf") format('truetype'),
        url('../fonts/Trebuchet/Trebuchet.woff')  format('woff');
-}    /* Trebuchet */
+}
 
 .container {
   max-width: 1100px;
@@ -460,8 +460,8 @@ footer .span_phone {
 .sort_by {
   background: url('../img/bg_for_start.png') no-repeat center/100%;
   padding: 10px;
-  width: 100%;
-  height: 64px;
+  width: 95%;
+  height: 61px;
 }
 .sort_by input {
   font-size: 15px;
@@ -618,6 +618,67 @@ footer .span_phone {
 }
 .b10 {
   margin-left: 28px;
+}
+
+
+
+.main .cloud p {
+  font-size: 14px;
+  margin: 0px;
+  color: #090000;
+  font-family: "RotondaC";
+}
+.blank {
+  background: url('../img/bg_blank_main.png') no-repeat;
+  background-size: 100% 100%;
+  /* border: solid 1px; */
+}
+.filter {
+  /* border: solid 1px; */
+  width: 231px;
+  height: 263px;
+  /* margin-top: 15px; */
+  /* margin-bottom: 15px; */
+}
+.kind_of {
+  /* border: solid 1px; */
+  width: 231px;
+  height: 335px;
+  /* margin-top: 15px; */
+  /* margin-bottom: 15px; */
+}
+.brand {
+  /* border: solid 1px; */
+  width: 231px;
+  height: 382px;
+  /* margin-top: 15px; */
+  /* margin-bottom: 15px; */
+}
+.characteristic {
+  /* border: solid 1px; */
+  width: 231px;
+  height: 352px;
+  /* margin-top: 15px; */
+  /* margin-bottom: 15px; */
+}
+.main .catalog {
+  /* border: solid 1px; */
+  width: 231px;
+  height: 418px;
+  /* margin-top: 15px; */
+  /* margin-bottom: 85px; */
+}
+.blank_title {
+  text-align: center;
+  padding-right: 20px;
+}
+.blank_title p {
+  display: inline-block;
+  margin-top: 20px;
+  color: #2d5d7e;
+  font-family: "RotondaBold";
+  font-size: 19px;
+  font-weight: 700;
 }
 
 
