--- a/css/style.css
+++ b/css/style.css
@@ -643,11 +643,11 @@ footer .span_phone {
 .kind_of {
   /* border: solid 1px; */
   width: 231px;
-  height: 335px;
+  height: 345px;
   /* margin-top: 15px; */
   /* margin-bottom: 15px; */
 }
-.brand {
+.main .brand {
   /* border: solid 1px; */
   width: 231px;
   height: 382px;
@@ -677,8 +677,9 @@ footer .span_phone {
   margin-top: 20px;
   color: #2d5d7e;
   font-family: "RotondaBold";
-  font-size: 19px;
+  font-size: 24px;
   font-weight: 700;
+  margin-bottom: 10px;
 }
 
 
