--- a/css/style.css
+++ b/css/style.css
@@ -657,6 +657,56 @@ footer .span_phone {
 
 
 
+.filter-price p {
+	width: 50%;
+	display: flex;
+	align-items: center;
+}
+
+.filter-price input {
+	text-align: center;
+	border: 1px solid #e6e6e6;
+	background: #f3f3f3;
+	color:#000;
+	font-family: RotondaC;
+	font-weight: 500;
+	width: 100%;
+	height: 80%;
+}
+
+.filter-price input:focus {
+	outline: none;
+}
+
+.ui-slider.ui-slider-horizontal {
+  background: rgb(106,106,106);
+  background: linear-gradient(180deg, rgba(106,106,106,1) 0%, rgba(167,167,167,1) 20%, rgba(231,231,231,1) 100%);
+  width: 80%;
+  margin: 0 15%;
+  border:none;
+  border-radius: 20px;
+}
+
+.ui-slider .ui-slider-range {
+  background: rgb(255,136,0);
+  background: linear-gradient(0deg, rgba(255,136,0,1) 0%, rgba(255,184,0,1) 20%, rgba(255,214,0,1) 100%);
+}
+
+.ui-slider .ui-slider-handle {
+	width: 20px;
+	height: 20px;
+  border: 6px solid #e8e8e8;
+  border-radius: 50%;
+  cursor:pointer;
+  background: #b5b5b5;
+  box-shadow: -1px 1px 3px black;
+}
+
+.ui-slider .ui-slider-handle:focus {
+	outline: none;
+}
+
+
 .parent {
   background: url('../img/plus.png') 0 3px no-repeat;
   /* border: solid 1px; */
