--- a/css/style.css
+++ b/css/style.css
@@ -38,24 +38,9 @@ section .main {
   margin: 0;
 }
 * {
-  /* -webkit-overflow-scrolling: touch; */
+  -webkit-overflow-scrolling: touch;
 }
-header .col-8, header .col-10 {
-  /* height: auto; */
-  /* margin-top: 20px; */
-  /* border: solid 1px; */
-}
-header .col-10 {
-  /* margin-top: 70px; */
-}
-#dark_theme {
-  position: absolute;
-  top: 22px;
-  right: 35px;
-  font-size: 22px;
-  border: solid 1px;
-  /* display: none; */
-}
+
 
 /*=============================== index.html=================================================*/
 .columnsn {
@@ -439,15 +424,6 @@ footer .span_phone {
   .Delivery_Advertising img {
     height: 190px;
   }
-  header {
-    background-size: auto 100%;
-    margin-bottom: 30px;
-  }
-  header .col-10 {
-    display: none;
-    margin-top: 20px;
-    height: auto;
-  }
 }
 @media screen and (max-width: 452px){
   .Delivery_Advertising img {
@@ -462,9 +438,6 @@ footer .span_phone {
 @media screen and (max-width: 370px){
   .Delivery_Advertising img {
     height: 130px;
-  }
-  header .col-12 {
-    margin-top: 40px;
   }
 }
 @media screen and (max-width: 330px){
